export enum Result {
    GOOD,
    EVIL,
    DRAW,
}
